--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "orm-trial",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
+  "description": "ORM PoC/comparison",
+  "author": "Yazeed Loonat",
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
